# pydev_poetry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  jupytext.toml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
playground/notebooks/: sample.py
src/hello/: greet.py
src/pydev_poetry/myleet/: mypow.py
tests/: test_kyu.py  test_mypow.py  test_package.py
