[tool.poetry]
name = "pydevpoetry"
version = "0.1.0"
description = "mysample"
authors = ["Satoshi Terasaki <terasakisatoshi.math@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"
mock = "^4.0.3"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
