[tool.poetry]
name = "pydev_poetry"
packages = [
    { include = "pydev_poetry", from = "src" },
]
version = "0.1.0"
description = "mysample"
authors = ["Satoshi Terasaki <terasakisatoshi.math@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"
mock = "^4.0.3"
mypy = "^0.800"
jupyter = "^1.0.0"
jupyterlab = "^3.0.5"
jupytext = "^1.9.1"
ipywidgets = "^7.6.3"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterlab-code-formatter = "^1.4.2"
lckr-jupyterlab-variableinspector = "^3.0.6"
pytest = "^6.2.2"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
